# polynomial-lib

./: .gitignore  CMakeLists.txt  Makefile  testcases.txt
inc/: polynomail_helper.h  polynomial.h
src/: a.out  chatgpt.c  main.c  polynomial.c  test  test.c  testbench.c
